@@ -15,7 +15,6 @@ import org.springframework.stereotype.Component;
 import java.time.LocalTime;
 import java.util.Calendar;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class ReservaService implements IReservaRepositoryDomainContract {
@@ -45,7 +44,7 @@ public class ReservaService implements IReservaRepositoryDomainContract {
         return this.repository.findByRestauranteAndDataAndHoraAndStatus(instance, data, hora, statusReserva)
                 .stream()
                 .map(ReservaTable::ToDomainEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
